# toggl

./: .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  renovate.json
.github/: FUNDING.yml  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yaml
npm/: package.json.sub.tmpl
npm/app/: package.json.tmpl
npm/main/: index.js
npm/sub/: README.md
src/: cli.rs  client.rs  components.rs  customization.rs  edit_time_entry.rs  login.rs  main.rs  project.rs  related_info.rs  run_lock.rs  state.rs  test.rs  time_entry.rs  updater.rs  utils.rs  workspace.rs
src/customization/: date_format.rs  mod.rs  time_format.rs  weekday.rs
src/entities/: mod.rs  preferences.rs  project.rs  related_info.rs  tag.rs  workspace.rs
src/screens/: edit_time_entry.rs  legal.rs  login.rs  mod.rs
src/utils/: client.rs  mod.rs  serde.rs
src/widgets/: base.rs  date_time_widget.rs  menu_helpers.rs  mod.rs  running_entry.rs  tag_editor.rs  text_editor_ext.rs
