[dependencies]
atty = "0.2.14"
base64 = "0.22.1"
chrono = {version = "0.4.38", features = ["serde"]}
clap = {version = "4.5.36", features = ["cargo", "derive"]}
directories-next = "2.0.0"
env_logger = "0.11.5"
iced = {version = "0.13.1", features = ["tokio", "debug", "advanced", "image"]}
iced_aw = {version = "0.12.2", features = ["badge", "drop_down", "menu", "date_picker", "time_picker"], default-features = false}
iced_fonts = {version = "0.2.1", features = ["bootstrap", "required"]}
interprocess = {version = "2.2.3", features = ["tokio"]}
itertools = "0.14.0"
log = {version = "0.4.22", features = ["max_level_trace", "release_max_level_info"]}
opener = "0.8.0"
openssl = {version = "0.10.66", features = ["vendored"]}
reqwest = "0.12.21"
self_update = {version = "0.42.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sys-locale = "0.3.1"
tokio = {version = "1.45.1", features = ["fs", "time", "macros", "rt-multi-thread"]}

[package]
categories = ["gui"]
description = "A simple GUI for Toggl tracker API that runs on any platform."
edition = "2021"
homepage = "https://github.com/sterliakov/toggl"
include = ["src", "assets", "LICENSE", "README.md"]
keywords = ["time-tracker", "toggl"]
license = "MIT"
name = "toggl-tracker"
readme = "README.md"
repository = "https://github.com/sterliakov/toggl"
version = "0.3.5"

[profile.release]
lto = true
strip = true
